
    o	glm.fit.null(), lm.fit.null() and lm.wfit.null() are defunct.

    o	print.atomic() is defunct.

    o	The command-line arguments --nsize and --vsize are no longer
	recognized as synonyms for --min-nsize and --min-vsize (which
	replaced them in 1.2.0).

    o   Unnecessary methods coef.{g}lm and fitted.{g}lm
	have been removed: they were each identical to the default
	method.


INSTALLATION CHANGES

    o	The defaults for configure are now --without-zlib
	--without-bzlib --without-pcre.  PCRE >= 4.0 is now required:
	the included PCRE sources have been updated to version 4.5.

    o	configure no longer lists bzip2 and PCRE as `additional
	capabilities' as all builds of R have had them since 1.7.0.

    o	--with-blas=goto to use K. Goto's optimized BLAS will now work.


BUG FIXES

    o   termplot() is more tolerant of variables not in the data= argument. 
	(PR#6327)

    o	contrasts() turns a logical variable into a factor.  This now
	always has levels c("FALSE", "TRUE") even if only one (or
	none) of these occur in the variable.

    o	model.frame()'s lm and glm methods had 'data' and 'na.action'
	arguments which they ignored and have been removed.

    o	The defaults data=list() in lm() and glm() could never be
	used and have been removed.  glm had na.action=na.fail, again
	never used.

    o	tools:::.getInternalS3generics() was omitting all the members
	of the S3 group generics, which also accept methods for members.

    o	Some BLASes were returning NA %*% 0 as 0 and some as NA.  Now
	slower but more careful code is used if NAs are present. (PR#4582)

    o	package.skeleton() no longer generates invalid filenames for
	code and help files.  Also, care is taken not to generate
	filenames that differ only by case.

    o	pairs() now respects axis graphical parameters such as
	cex.main, font.main and las.

    o	Saving images of packages with namespaces (such as mle) was
	not compressing the image.
